force-app/main/default/objects/Time_Entry__c/fields/Billing_Rate__c.field-meta.xml
<CustomField>
    <fullName>Billing_Rate__c</fullName>
    <label>Billing Rate</label>
    <precision>18</precision>
    <required>true</required>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>