force-app/main/default/objects/Time_Entry__c/fields/End_Time__c.field-meta.xml
<CustomField>
    <fullName>End_Time__c</fullName>
    <label>End Time</label>
    <required>true</required>
    <type>DateTime</type>
</CustomField>