force-app/main/default/objects/Time_Entry__c/fields/Total_Billing_for_hours__c.field-meta.xml
<CustomField>
    <fullName>Total_Billing_for_hours__c</fullName>
    <formula>Billing_Rate__c  *  Hours__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Total Billing for hours</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>